# lingqi_tantong

./: .gitignore  CMakeLists.txt  README.md  build.py  download_threejs.sh  gy85_json_output.py  run_wsl.sh  verify_port.py  日志
.claude/plans/: audit-fix-plan.md  bugfix-plan.md  remediation-plan.md
.trae/rules/: k1_platform_facts.md  rules.md
cmake/: esp32p4-toolchain.cmake  riscv64-toolchain.cmake
configs/: default.yaml
docs/: 3D_WORLD_COORDINATE_SYSTEM_PLAN.md  ARCHITECTURE.md  BUILD_GUIDE.md  CODE_AUDIT_REPORT.md  CODE_CHANGE_LOG.md  COMPREHENSIVE_PROJECT_DOCUMENTATION.md  IMPLEMENTATION_GAPS.md  IMPROVEMENT_PLAN.md  INFERENCE_OPTIMIZATION_ANALYSIS.md  K1_HARDWARE_OPTIMIZATION_PLAN.md  MODEL_SPECIFICATION.md  OPTIMIZATION_DESIGN.md  OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PROBLEM_ANALYSIS_REPORT.md  REFACTORING_REPORT.md  TESTING_GUIDE.md  TESTING_GUIDE_V2.md  code-audit-report-2026-06-29.md  inference-pipeline-rewrite-plan.md  remediation-plan.md  改进.md  认知检查报告.md
esp32p4_firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32p4_firmware/main/: CMakeLists.txt  camera_capture.c  camera_capture.h  gy87_driver.c  gy87_driver.h  imu_fusion.c  imu_fusion.h  main.c  protocol.c  protocol.h
include/: ai_accel_adapter.h  ar_renderer.h  arcface_recognizer.h  arrow_receiver.h  benchmark.h  coap_receiver.h  config_manager.h  core_types.h  display_output.h  display_sdl2.h  frame_diff.h  imu_handler.h  inference_pipeline.h  json_writer.h  k1_imu.h  k1_jpu.h  k1_jpu_api.h  k1_odometry.h  k1_platform.h  kcp_lite.h  keypoint_validator.h  logger.h  mahony_filter.h  mjpeg_receiver.h  model_export.h  model_store.h  ort_common.h  ort_inference_context.h  pipeline_state.h  result_manager.h  scrfd_detector.h  spacemit_ort_bridge.h  spatial_engine.h  stgcn_action_recognizer.h  system_controller.h  terminal_ui.h  tracking_manager.h  utils.h  video_processor.h  video_writer.h  (+7 more)
receive/: coap_server(1).h  coap_server.h  ov-imu-pwm(1).ino  ov-imu-pwm(1).py  ov-imu-pwm.ino  ov-imu-pwm.py  receive.ino  test-new-noface.py  test-ov-imu.ino  test-ov-imu.py  test-udp.py
src/: ai_accel_adapter.c  ar_renderer.c  arcface_recognizer.c  arrow_receiver.c  benchmark.c  coap_receiver.c  config_manager.c  core_types.c  display_output.c  display_sdl2.c  frame_diff.c  imu_handler.c  inference_pipeline.c  json_writer.c  k1_imu.c  k1_jpu.c  k1_odometry.c  k1_platform.c  kcp_lite.c  keypoint_validator.c  logger.c  mahony_filter.c  main.c  mjpeg_receiver.c  model_export.c  model_store.c  ort_common.c  ort_inference_context.c  pipeline_state.c  result_manager.c  scrfd_detector.c  spacemit_ort_bridge.cpp  spatial_engine.c  stgcn_action_recognizer.c  system_controller.c  terminal_ui.c  tracking_manager.c  utils.c  video_processor.c  video_writer.c  (+7 more)
tests/: test_basic.c
web/: index.html
